<resources>
    <string name="error_internet">Check Internet Connection…</string>

    <!--    Login-->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="message_valid_email">Please enter valid email address</string>
    <string name="message_valid_password">Please enter valid password</string>
    <string name="message_valid_password_length">Please enter attlist 6 characters.</string>

    <!--    Home-->
    <string name="empty_todo_list">Empty Todo List</string>

    <!--    Add Todo-->
    <string name="add_todo">Add Todo</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="select_time_and_date">Select Time and Date</string>
    <string name="update">Update</string>
    <string name="delete_todo_title">Delete Todo!!</string>
    <string name="delete_todo_message">Are you sure that you want to delete this todo item?</string>

    <string name="message_valid_title">Title  can\'t be empty</string>
    <string name="message_valid_description">Description can\'t be empty</string>
    <string name="message_valid_type">Please select type daily or weekly</string>
    <string name="message_valid_date_and_time">Please select date and time</string>

    <!--    Menu Item-->
    <string name="logout">Logout</string>

</resources>